--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -1505,7 +1505,7 @@
     <bool>true</bool>
    </property>
    <property name="text">
-    <string>1000%</string>
+    <string>1&amp;600%</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+5</string>
