main: Reworked Select None into a Select Single button
This now selects everything other than the active item, since otherwise
it can be a bit cumbersome to perform the equivalent action using the
existing Select None functionality. This makes more sense since there
really isn't much of a purpose to selecting nothing before hitting the
Save button.

--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -829,12 +829,12 @@
                  </widget>
                 </item>
                 <item>
-                 <widget class="QPushButton" name="cmdRcSelectNone">
+                 <widget class="QPushButton" name="cmdRcSelectSingle">
                   <property name="whatsThis">
                    <string>Unmarks all color ranges for saving to disk.</string>
                   </property>
                   <property name="text">
-                   <string>&amp;None</string>
+                   <string>Si&amp;ngle</string>
                   </property>
                  </widget>
                 </item>
@@ -1606,7 +1606,7 @@
   <tabstop>cbxKeyPal</tabstop>
   <tabstop>listRanges</tabstop>
   <tabstop>cmdRcSelectAll</tabstop>
-  <tabstop>cmdRcSelectNone</tabstop>
+  <tabstop>cmdRcSelectSingle</tabstop>
   <tabstop>cbxNewPal</tabstop>
   <tabstop>leBlendColor</tabstop>
   <tabstop>tbBlendColor</tabstop>
