settingsdialog: Add platform color theme hint functionality

--- a/src/settingsdialog.ui
+++ b/src/settingsdialog.ui
@@ -67,6 +67,65 @@
            </widget>
           </item>
           <item>
+           <widget class="QFrame" name="appearanceGroup">
+            <layout class="QHBoxLayout" name="horizontalLayout_3">
+             <property name="leftMargin">
+              <number>0</number>
+             </property>
+             <property name="topMargin">
+              <number>0</number>
+             </property>
+             <property name="rightMargin">
+              <number>0</number>
+             </property>
+             <property name="bottomMargin">
+              <number>0</number>
+             </property>
+             <item>
+              <widget class="QLabel" name="appearanceLabel">
+               <property name="text">
+                <string>Appearance:</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QRadioButton" name="appearanceDefaultRadio">
+               <property name="text">
+                <string>&amp;System</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QRadioButton" name="appearanceLightRadio">
+               <property name="text">
+                <string>&amp;Light</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QRadioButton" name="appearanceDarkRadio">
+               <property name="text">
+                <string>&amp;Dark</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <spacer name="horizontalSpacer_5">
+               <property name="orientation">
+                <enum>Qt::Orientation::Horizontal</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>40</width>
+                 <height>20</height>
+                </size>
+               </property>
+              </spacer>
+             </item>
+            </layout>
+           </widget>
+          </item>
+          <item>
            <layout class="QHBoxLayout" name="horizontalLayout">
             <item>
              <widget class="QLabel" name="defaultZoomLabel">
